--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "django-cms"]
 	path = django-cms
 	url = git://github.com/philomat/django-cms-2.0.git
+[submodule "django-persistent-messages"]
+	path = django-persistent-messages
+	url = git://github.com/philomat/django-persistent-messages.git
