--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "django-user-profiles"]
 	path = django-user-profiles
 	url = git@github.com:philomat/django-user-profiles.git
+[submodule "django-form-designer"]
+	path = django-form-designer
+	url = git://github.com/philomat/django-form-designer.git
